# Deepseek-balance-widget

./: .gitignore  Cargo.toml  README.md  README.zh.md
.github/workflows/: release.yml
src/: api.rs  autostart.rs  config.rs  lib.rs  main.rs  render.rs  tray.rs
tests/: api_tests.rs  autostart_tests.rs  config_tests.rs  render_tests.rs
