[package]
name = "deepseek-tray"
version = "1.2.1"
edition = "2021"
description = "DeepSeek API balance monitor in Windows system tray"

[dependencies]
tray-icon = "0.19"
tao = "0.31"
muda = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
windows = { version = "0.58", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi"] }
winreg = "0.53"
dirs = "6"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
arboard = "3"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
